# sgw

./: .gitignore  CMakeLists.txt  README.md  cmakeConfig.h.in  main.cpp
example/: example.cpp
gtest/: test.cpp
include/sgw/: App.hpp  AppData.hpp  Color.hpp  Prefs.hpp  Texture.hpp  sgw.hpp
include/sgw/geom/: AllShapes.hpp  Image.hpp  Octahedron.hpp  Rect.hpp  Size.hpp  Size3D.hpp  Sphere.hpp  Triangle.hpp  Vec2.hpp  Vec3.hpp
src/app/: App.cpp  App.cpp~  BaseApp.cpp  BaseApp.hpp  GlfwApp.cpp  GlfwApp.hpp  GlutApp.cpp  GlutApp.hpp  IApp.hpp  gApp.cpp  gApp.hpp
src/h/: prefs.hpp
src/math/: Transform.cpp  Transform.hpp  camera.cpp  camera.hpp  math.cpp  math.hpp  transform.cpp  transform.hpp
src/renderer/: BaseRenderer.cpp  BaseRenderer.hpp  FlushList.hpp  IRenderer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  Vertex.hpp
src/renderer/image/: Image.cpp  Texture.cpp
src/renderer/shape/: AllShapes.hpp  BaseShape.cpp  BaseShape.hpp  Octahedron.cpp  Rect.hpp  Sphere.cpp  Triangle.cpp
src/utils/: Color.hpp  Logger.cpp  Logger.hpp  texture.cpp  texture.hpp  utils.cpp  utils.cpp~  utils.hpp  utils.hpp~
test/: check.cpp  check.hpp  test.cpp
